--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/Inventario_Forestal.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-math3-3.2.jar=commons-math3-3.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.DSI_Library.classpath}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.commons-math3-3.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
