Commit Führer Fecha: REPORTES

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,10 @@ dist.jar=${dist.dir}/Inventario_Forestal.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-math3-3.2.jar=commons-math3-3.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.DSI_Library.classpath}:\
-    ${libs.eclipselink.classpath}:\
-    ${file.reference.commons-math3-3.2.jar}
+    ${libs.DSI_V3.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
